[package]
name = "image-combine"
version = "1.0.1"
edition = "2024"
description = "A fast CLI tool for combining multiple images into a single image."
license = "MIT"
authors = ["Destin Ecarma"]
readme = "README.md"
homepage = "https://github.com/DestinEcarma/image-combine"
repository = "https://github.com/DestinEcarma/image-combine"
keywords = ["cli", "image", "collage", "combine", "merge"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
glob = "0.3.3"
image = "0.25.10"
rayon = "1.11.0"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
